[tool.poetry]
name = "NLDCSC"
version = "0.3.10"
description = "Package with general devops code"
readme = "README.md"
repository = "https://github.com/NLDCSC/nldcsc"
authors = ["NLDCSC <NLDCSC@invalid.com>"]
license = "GNU General Public License v3.0"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]


[tool.poetry.urls]
"Code" = "https://github.com/NLDCSC/nldcsc"


[tool.nldcsc.group.dependencies]
auth = ["loggers"]
datatables = ["flask_plugins"]
flask_managers = ["loggers", "sql_migrations"]
flask_middleware = ["flask_managers"]
plugins = ["plugin_doh", "plugin_geo_ip", "plugin_sql_migrate", "plugin_redis", "plugin_whoisxml"]
custom_types = ["custom_type_sqlalchemy"]
sql_migrations = ["mysql", "loggers"]
flask_plugins = ["plugin_sql_migrate", "custom_type_sqlalchemy", "plugin_redis"]
plugin_doh = ["httpx_apis", "loggers"]
plugin_geo_ip = ["httpx_apis", "loggers"]
plugin_whoisxml = ["http_apis", "loggers"]


[tool.poetry.group.auth.dependencies]
python-ldap = ">=3.4.3"
click = "8.1.7"


[tool.poetry.group.flask_managers.dependencies]
gunicorn = ">=21.2.0"
flask = ">=2.3.3"
pyopenssl = ">=23.2.0"
werkzeug = ">=2.3.7"
flask-socketio = ">=5.3.6"


[tool.poetry.group.flask_middleware.dependencies]
rfc3339 = ">=6.2"


[tool.poetry.group.flask_plugins.dependencies]
eswrap = ">=0.5.0"
kafka-python = ">=2.0.2"
elasticsearch = ">=8.7.0"
flask = ">=2.3.3"
sqlalchemy = ">=2.0.21"
flask-sqlalchemy = ">=3.1.1"
flask-migrate = ">=4.0.5"
werkzeug = ">=2.3.7"


[tool.poetry.group.http_apis.dependencies]
requests = ">=2.31.0"


[tool.poetry.group.httpx_apis.dependencies]
httpx = ">=0.27.0"


[tool.poetry.group.loggers.dependencies]
gunicorn = ">=21.2.0"
ansicolors = ">=1.1.8"
pygelf = ">=0.4.2"


[tool.poetry.group.plugin_doh.dependencies]
dataclasses-json = ">=0.6.7"
netaddr = ">=1.3.0"


[tool.poetry.group.plugin_geo_ip.dependencies]
aiohttp = ">=3.10.9"


[tool.poetry.group.plugin_whoisxml.dependencies]
dataclasses-json = ">=0.6.7"

[tool.poetry.group.mysql.dependencies]
pymysql = ">=1.1.0"
mysqlclient = ">=2.1.1"


[tool.poetry.group.sql_migrations.dependencies]
flask-migrate = ">=4.0.5"
flask-sqlalchemy = ">=3.1.1"
flask = ">=2.3.3"


[tool.poetry.group.sso.dependencies]
authlib = ">=1.3.0"
flask = ">=2.3.3"
pyjwt = ">=2.8.0"


[tool.poetry.group.plugin_sql_migrate.dependencies]
sqlalchemy = ">=2.0.21"
alembic = "1.13.2"
tabulate = "0.9.0"
dataclasses-json = ">=0.6.7"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-env = "^1.1.5"
mock = "^5.1.0"
requests-mock = "^1.12.1"


[tool.poetry.group.custom_type_sqlalchemy.dependencies]
sqlalchemy = ">=2.0.21"


[tool.poetry.group.plugin_redis.dependencies]
redis = ">=4.6.0"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = ">=68.1.0"

[build-system]
requires = ["setuptools >= 61.0", "poetry == 1.8.4"]
build-backend = "setuptools.build_meta"

[tool.bandit]
exclude_dirs = ["tests"]
tests = []
skips = []
